--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,199 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+@font-face {
+  font-family: starcraftFont;
+  src: url(assets/fonts/starcraft.ttf);
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+@font-face {
+  font-family: commandFont;
+  src: url(assets/fonts/command.ttf);
+}
+
+body {
+  margin: 0px;
+  background-color: #FAEBD7 !important;
+  font-family: commandFont !important;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+
+}
+
+.dark-mode{
+  background-color: #160f30 !important;
+  color: white;
+}
+
+.dark-mode-link{
+  color: #eae7af !important;
+  text-decoration: none;
+}
+
+.dark-mode-link:hover{
+  color: #ffbd69 !important;
+
+  text-decoration: none;
+}
+
+.dark-text{
+  color: #eae7af !important;
+}
+
+.zerg-logo{
+  background: transparent;
+  width: 50px;
+  background-color: transparent;
+}
+
+.zerg-logo:hover{
+  animation: zerg-logo 0.5s alternate infinite ease-in-out;
+
+}
+
+@keyframes zerg-logo {
+  0%   {transform: scale(.95);}
+  100% {transform: scale(1.05);}
+}
+
+.starcraft-font{
+  font-family: starcraftFont;
+}
+
+.command-font{
+
+}
+.nav-item{
+  font-size: 20px;
+  font-weight: 900;
+}
+.music-button{
+  width:20px;
+  height:20px;
+  cursor: pointer;
+  margin: 5px;
+}
+
+.g-card {
+  margin: 50px;
+  /* margin-right: 200px; */
+  /* margin-left: 200px; */
+  max-width: 300px;
+}
+
+.card-container{
+  margin-left: 300px;
+  margin-right: 300px;
+}
+
+
+.cujo{
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 50px;
+  border-radius: 100px;
+  height: 150px;
+  width: 150px;
+}
+
+.cujo:hover{
+  animation: cujo 0.5s alternate infinite ease-in-out;
+
+}
+
+@keyframes cujo {
+  0%   {transform: scale(.95);}
+  100% {transform: scale(1.05);}
+}
+
+
+
+
+
+.g-card-image{
+  cursor: pointer;
+  border-radius: 10px;
+  margin-bottom: 10px;
+  width: 200px;
+  height: 200px;
+  box-shadow: 0px 0px 3px 1px #ccc;
+}
+
+.g-card-description{
+  font-size: 16px;
+  margin: 0px;
+  height: 50px;
+}
+.g-card-title{
+  font-size: 24px;
+  margin: 0px;
+  text-align: center;
+}
+
+.g-card-info{
+  min-height: 100px;
+}
+
+.g-card-sub-title{
+  font-size: 20px;
+  margin: 0px;
+  text-align: center;
+
+}
+
+.success-msg{
+  color: #56A773;
+  padding: 10px 15px;
+}
+
+.err-msg{
+  color: #EE6352;
+  padding: 10px 15px;
+}
+
+.lang-logo-image{
+  width: 24px;
+  height: 24px;
+  margin: 5px;
+  background: transparent;
+  animation-name: spin;
+  border-radius: 100px;
+
+  /* animation-duration: 5000ms;
+  animation-iteration-count: 1;
+  animation-timing-function: linear;  */
+}
+
+.lang-logo-container{
+  display: flex;
+  margin-left: 20px;
+
+
+}
+
+
+/* .lang-logo-image:hover{
+  animation: spin 1s ease-in-out;
+}
+@keyframes spin {
+    from {
+        transform:rotate(0deg);
+    }
+    to {
+        transform:rotate(360deg);
+    }
+} */
+.lang-logo-image:hover {
+  animation: spin 3s ease-in-out;
+}
+
+@keyframes spin {
+  from {
+      transform: rotate(0deg);
+  }
+
+  to {
+      transform: rotate(360deg);
+  }
+}
+
+.center-text{
+  text-align: center;
 }
