--- a/src/index.css
+++ b/src/index.css
@@ -19,7 +19,7 @@ body {
 
 .dark-mode{
   background-color: #160f30 !important;
-  color: white;
+  color: #69779b;
 }
 
 .dark-mode-link{
@@ -33,9 +33,11 @@ body {
   text-decoration: none;
 }
 
+
 .dark-text{
   color: #eae7af !important;
 }
+
 
 .zerg-logo{
   background: transparent;
@@ -45,7 +47,6 @@ body {
 
 .zerg-logo:hover{
   animation: zerg-logo 0.5s alternate infinite ease-in-out;
-
 }
 
 @keyframes zerg-logo {
@@ -57,9 +58,7 @@ body {
   font-family: starcraftFont;
 }
 
-.command-font{
 
-}
 .nav-item{
   font-size: 20px;
   font-weight: 900;
@@ -75,7 +74,7 @@ body {
   margin: 50px;
   /* margin-right: 200px; */
   /* margin-left: 200px; */
-  max-width: 300px;
+  /* max-width: 300px; */
 }
 
 .card-container{
@@ -89,7 +88,7 @@ body {
   margin-right: auto;
   margin-top: 50px;
   border-radius: 100px;
-  height: 150px;
+  height: 100px;
   width: 150px;
 }
 
@@ -111,12 +110,13 @@ body {
   cursor: pointer;
   border-radius: 10px;
   margin-bottom: 10px;
-  width: 200px;
-  height: 200px;
+  width: 300px;
+  height: 300px;
   box-shadow: 0px 0px 3px 1px #ccc;
 }
 
 .g-card-description{
+  width: 300px;
   font-size: 16px;
   margin: 0px;
   height: 50px;
@@ -131,13 +131,49 @@ body {
   min-height: 100px;
 }
 
-.g-card-sub-title{
+.g-card-sub-title-dark{
+  color: #FFD2FC;
   font-size: 20px;
   margin: 0px;
   text-align: center;
 
 }
 
+.cv-title{
+  color: #231651;
+}
+.cv-title-dark{
+  color: #eae7af;
+}
+
+.cv-date{
+  color: #2374AB;
+}
+.cv-date-dark{
+  color: #ffbd69;
+
+}
+.vertical-line-cv-dark{
+  border-left: 2px solid #eae7af;
+  height: 100rem;
+}
+
+.vertical-line-cv{
+  border-left: 2px solid #231651;
+  height: 100rem;
+}
+
+.cv-subtitle{
+  color: #2374AB;
+
+}
+.g-card-sub-title{
+  color: #2374AB;
+  font-size: 20px;
+  margin: 0px;
+  text-align: center;
+
+}
 .success-msg{
   color: #56A773;
   padding: 10px 15px;
@@ -153,12 +189,7 @@ body {
   height: 24px;
   margin: 5px;
   background: transparent;
-  animation-name: spin;
   border-radius: 100px;
-
-  /* animation-duration: 5000ms;
-  animation-iteration-count: 1;
-  animation-timing-function: linear;  */
 }
 
 .lang-logo-container{
@@ -168,20 +199,8 @@ body {
 
 }
 
-
-/* .lang-logo-image:hover{
-  animation: spin 1s ease-in-out;
-}
-@keyframes spin {
-    from {
-        transform:rotate(0deg);
-    }
-    to {
-        transform:rotate(360deg);
-    }
-} */
 .lang-logo-image:hover {
-  animation: spin 3s ease-in-out;
+  animation: spin 0.5s ease-in-out;
 }
 
 @keyframes spin {
@@ -196,4 +215,26 @@ body {
 
 .center-text{
   text-align: center;
+}
+
+
+
+.margin-top-cv{
+  margin-top: 2rem;
+}
+
+.margin-bot-cv{
+  margin-bottom: 1rem;
+}
+
+.letter-space{
+  letter-spacing: 2px;
+}
+
+.section-margin-cv-bot{
+  margin-bottom: 3rem;
+}
+
+.section-margin-cv-top{
+  margin-bottom: 1rem;
 }
